--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "express-ipfilter": "^0.3.1",
+    "moment": "^2.21.0"
   }
 }
