--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
-    "express-ipfilter": "^0.3.1",
-    "moment": "^2.21.0"
+    "moment": "^2.21.0",
+    "request-ip": "^2.0.2"
   }
 }
