--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "moment": "^2.21.0",
-    "request-ip": "^2.0.2"
+    "request-ip": "^2.0.2",
+    "uuid": "^3.2.1"
   }
 }
