--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.1",
+    "express-jwt-authz": "^1.0.0",
+    "jwks-rsa": "^1.2.1",
     "moment": "^2.21.0",
     "request-ip": "^2.0.2",
     "uuid": "^3.2.1"
