--- a/package.json
+++ b/package.json
@@ -9,18 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "auth0-js": "^9.3.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^1.0.0",
-    "jsonwebtoken": "^8.2.0",
     "jwks-rsa": "^1.2.1",
     "moment": "^2.21.0",
-    "node-fetch": "^2.1.1",
-    "request-ip": "^2.0.2",
-    "uuid": "^3.2.1"
+    "node-fetch": "^2.1.1"
   }
 }
