--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "express-jwt-authz": "^1.0.0",
+    "gtoken": "^2.2.0",
     "jwks-rsa": "^1.2.1",
     "moment": "^2.21.0",
     "node-fetch": "^2.1.1"
